--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -54,16 +53,12 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
 
     // Google
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.android.material:material:1.8.0-alpha01'
 
     // Hilt
-    implementation 'androidx.hilt:hilt-work:1.0.0'
     implementation "com.google.dagger:hilt-android:2.42"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "com.google.dagger:hilt-android-compiler:2.42"
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
-
 
     // Room
     implementation "androidx.room:room-ktx:2.4.3"
@@ -72,9 +67,7 @@ dependencies {
 
     // Test
     testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation "androidx.room:room-testing:2.4.3"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.room:room-testing:2.4.3"
-    implementation "androidx.core:core-ktx:+"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
